# rust-core

./: .gitignore  Cargo.toml  README.md
traits/: Cargo.toml
traits/src/: empty.rs  flush.rs  lib.rs  save.rs  savetofile.rs  setfile.rs
